fixed issue related to the hamburger menu z-index

--- a/style.css
+++ b/style.css
@@ -185,6 +185,7 @@ button:-moz-focusring,
   padding: 5px;
   cursor: pointer;
   transition: background-color 100ms;
+  position: relative;
 }
 
 #hamburger-menu button:hover {
